fix home height on mobile, pass FCC tests

--- a/styles/style.css
+++ b/styles/style.css
@@ -86,6 +86,13 @@ main {
     height: 100vh;
 }
 
+@media only screen and (max-width: 600px) {
+    #welcome-section {
+        height: fit-content;
+    }
+}
+
+
 section {
     padding: clamp(13px,3vw,115px);
 }
